# oCAS

./: .gitignore  .release-plz.toml  404.html  ARCHITECTURE.md  ARCHITECTURE_CN.md  ARCHITECTURE_EN.md  CHANGELOG.md  Cargo.toml  GAP_ANALYSIS_CN.md  LICENSE  README.md  README_CN.md  ROADMAP.md  ROADMAP_EN.md  book.toml  deny.toml  index.html  lychee.toml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: CONTRIBUTING.md  dependabot.yml  release.yml
.github/workflows/: audit.yml  ci.yml  deny.yml  docs.yml  publish-batch.yml  release-plz.yml  release.yml  wheels.yml
docs/: README_CN.md  build-windows.cargo-config.toml  build-windows.md
docs/book/: language-switcher.js
docs/book/en/: book.toml
docs/book/en/src/: 404.md  SUMMARY.md  architecture.md  backends.md  bindings-c.md  bindings-python.md  build-windows.md  contributing.md  correctness.md  (+8 more)
docs/book/src/: SUMMARY.md  architecture.md  backends.md  bindings-c.md  bindings-python.md  build-windows.md  contributing.md  getting-started.md  introduction.md  performance.md
docs/book/zh/: book.toml
docs/planning/: ARCHITECTURE_CN.md  ARCHITECTURE_EN.md  EVOLUTION_PLAN_CN.md  EVOLUTION_PLAN_EN.md  GAP_ANALYSIS_CN.md  GAP_ANALYSIS_EN.md  ROADMAP_CN.md  ROADMAP_EN.md
latest/: language-switcher.css
latest/en/: 404.html  architecture.html  backends.html  bindings-c.html  bindings-python.html  build-windows.html  contributing.html  correctness.html  evaluation.html  external-references.html  getting-started.html  index.html  introduction.html  performance.html  print.html  rewrite.html  rust-api.html  searcher-09f2665d.js  searchindex-104fa799.js  searchindex-4564c646.js  searchindex-617a8171.js  searchindex-aa040217.js  searchindex-b9327217.js  searchindex-c79783ee.js  solvers.html  toc-05cd13fe.js  toc-6b1b38b3.js  toc-b4bbd6d2.js  toc-d71ebc20.js  toc.html
latest/en/algorithms/: factorization.html  rational-functions.html
latest/zh/: 404.html  architecture.html  backends.html  bindings-c.html  bindings-python.html  build-windows.html  contributing.html  correctness.html  evaluation.html  external-references.html  getting-started.html  index.html  introduction.html  performance.html  print.html  rewrite.html  rust-api.html  searcher-09f2665d.js  searchindex-0f6eda9a.js  searchindex-189bf316.js  searchindex-275a38ee.js  searchindex-356dfe38.js  searchindex-79abacc1.js  searchindex-e9bcace5.js  solvers.html  toc-10a08c6f.js  toc-1e639325.js  toc-25f49014.js  toc-59070e71.js  toc.html
latest/zh/algorithms/: factorization.html  rational-functions.html
ocas/: Cargo.toml
ocas-atom/: Cargo.toml
ocas-atom/proptest-regressions/: lib.txt
ocas-atom/src/: lib.rs  normalize.rs  tensor.rs  walk.rs  workspace.rs
ocas-c/: Cargo.toml  build.rs  cbindgen.toml
ocas-c/examples/: basic.c  cpp_example.cpp  expression.c
ocas-c/include/: ocas.h  ocas.hpp
ocas-c/src/: algebraic.rs  dual.rs  error.rs  expression.rs  lib.rs  numeric.rs  polynomial.rs  tensor.rs
ocas-c/tests/: c_api.rs  examples_compile.rs
ocas-calc/: Cargo.toml
ocas-calc/proptest-regressions/: lib.txt
ocas-calc/src/: complex.rs  derivative.rs  integral.rs  lib.rs  partial_fraction.rs  pattern_alloc.rs  rules.rs  series.rs  solve.rs
ocas-calc/src/integral/: mod.rs  rational.rs  rde.rs  risch.rs  special.rs  trig.rs
ocas-calc/src/tower/: build.rs  convert.rs  elem.rs  mod.rs
ocas-core/: Cargo.toml
ocas-core/src/: arena.rs  error.rs  fuel.rs  gmp.rs  lib.rs  thread_pool.rs
ocas-domain/: Cargo.toml
ocas-domain/src/: algebraic.rs  assumptions.rs  complex.rs  domain.rs  dual.rs  finite_field.rs  gmp_backend.rs  integer.rs  lib.rs  number_theory.rs  rational.rs  real_ball.rs
ocas-eval/: Cargo.toml
ocas-eval/src/: compile.rs  domain.rs  error.rs  evaluator.rs  function_map.rs  instruction.rs  jit.rs  lib.rs  optimize.rs  poly_eval.rs  simd.rs  streaming.rs  tree.rs
ocas-eval/src/numeric/: mod.rs  statistics.rs  vegas.rs
ocas-gpl/: Cargo.toml  LICENSE-GPL
ocas-parse/: Cargo.toml
ocas-parse/src/: lexer.rs  lib.rs  parser.rs
ocas-poly/: Cargo.toml
ocas-poly/proptest-regressions/factor/: eez.txt  hensel.txt
ocas-poly/src/: dense.rs  factor.rs  flint_poly.rs  gcd.rs  groebner.rs  lib.rs  matrix.rs  multivariate_gcd.rs  ntt.rs  rational.rs  rational_reconstruction.rs  resultant.rs  roots.rs  sparse.rs  sprs_backend.rs
ocas-poly/src/factor/: algebraic.rs  eez.rs  finite_field.rs  hensel.rs  mod.rs  multivariate.rs
ocas-poly/src/groebner/: f4.rs  f5.rs  fglm.rs  hilbert.rs  mod.rs
ocas-py/: Cargo.toml  pyproject.toml
ocas-py/src/: algebraic.rs  domain.rs  dual.rs  eval.rs  expression.rs  lib.rs  matrix.rs  numeric.rs  polynomial.rs  solve.rs  tensor.rs
ocas-rewrite/: Cargo.toml
ocas-rewrite/src/: egraph.rs  lib.rs  matcher.rs  pattern.rs  rules.rs  simplify.rs  transformer.rs
ocas-tests/: Cargo.toml  pyproject.toml
ocas-tests/benches/: arena.rs  calculus.rs  eval_estrin.rs  eval_interpreter.rs  eval_jit.rs  eval_pulp.rs  eval_simd.rs  eval_streaming.rs  gmp_integer.rs  groebner.rs  integrate.rs  normalize.rs  ntt_poly_mul.rs  parse.rs  poly_dense.rs  poly_factor.rs  poly_gcd.rs  poly_sparse.rs  polynomial.rs  rewrite.rs  sympy_comparison.rs
ocas-tests/scripts/: bench_sage.py  bench_sympy.py  compare_symbolica.py  compare_sympy.py  generate_audit_report.py
ocas-tests/scripts/symbolica_runner/: Cargo.toml
ocas-tests/scripts/symbolica_runner/src/: main.rs
ocas-tests/tests/: calculus.rs  dual_vs_diff.rs  evaluation.rs  groebner_timing.rs  integration.rs
ocas-tests/tests/correctness/: calculus.rs  evaluation.rs  finite_field.rs  groebner.rs  integral_risch.rs  linear_solve.rs  main.rs  matrix.rs  normalize.rs  parse.rs  partial_fraction.rs  poly_arithmetic.rs  poly_factor.rs  poly_factor_anf.rs  poly_gcd.rs  resultant.rs  rewrite.rs  root_isolation.rs
ocas-tests/tests/python/: test_algebraic.py  test_domain.py  test_dual.py  test_matrix.py  test_numeric.py  test_ocas.py  test_polynomial.py  test_tensor.py
ocas-tests/tests/verify/: integration.rs  main.rs  root_finding.rs
ocas/src/: lib.rs
(+25 files in other folders)
