[workspace]
members = [
    "ocas-core",
    "ocas-domain",
    "ocas-poly",
    "ocas-atom",
    "ocas-rewrite",
    "ocas-calc",
    "ocas-eval",
    "ocas-parse",
    "ocas",
    "ocas-py",
    "ocas-c",
    "ocas-gpl",
    "ocas-tests",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
authors = ["oCAS Contributors"]
edition = "2024"
rust-version = "1.89"
license = "LGPL-3.0-or-later"
repository = "https://github.com/ocas-dev/ocas"
homepage = "https://github.com/ocas-dev/ocas"
documentation = "https://docs.rs/ocas"
keywords = ["cas", "symbolic", "algebra", "mathematics", "polynomial"]
categories = ["science", "mathematics"]

[workspace.dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"
num-complex = "0.4"
inkwell = "0.5"
rayon = "1.10"
hashbrown = "0.15"
smallvec = "1.14"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
logos = "0.15"
chumsky = "0.10"
cranelift = "0.117"
cranelift-module = "0.117"
cranelift-jit = "0.117"
pyo3 = { version = "0.29", features = ["abi3-py310"] }
cbindgen = "0.28"
criterion = "0.5"
proptest = "1.6"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
