[workspace]
members = [
    "ocas-core",
    "ocas-domain",
    "ocas-poly",
    "ocas-atom",
    "ocas-rewrite",
    "ocas-calc",
    "ocas-eval",
    "ocas-parse",
    "ocas",
    "ocas-py",
    "ocas-c",
    "ocas-gpl",
    "ocas-tests",
]
resolver = "3"

[workspace.package]
version = "0.13.2"
authors = ["oCAS Contributors"]
edition = "2024"
rust-version = "1.89"
license = "LGPL-3.0-or-later"
repository = "https://github.com/charleshzh/ocas"
homepage = "https://github.com/charleshzh/ocas"
documentation = "https://docs.rs/ocas"
keywords = ["cas", "symbolic", "algebra", "mathematics", "polynomial"]
categories = ["science", "mathematics"]

[workspace.dependencies]
ocas-core = { path = "ocas-core", version = "0.13.2" }
ocas-domain = { path = "ocas-domain", version = "0.13.2" }
ocas-poly = { path = "ocas-poly", version = "0.13.2" }
ocas-atom = { path = "ocas-atom", version = "0.13.2" }
ocas-rewrite = { path = "ocas-rewrite", version = "0.13.2" }
ocas-calc = { path = "ocas-calc", version = "0.13.2" }
ocas-eval = { path = "ocas-eval", version = "0.13.2" }
ocas-parse = { path = "ocas-parse", version = "0.13.2" }
ocas = { path = "ocas", version = "0.13.2" }
ocas-py = { path = "ocas-py", version = "0.13.2" }
ocas-c = { path = "ocas-c", version = "0.13.2" }
ocas-gpl = { path = "ocas-gpl", version = "0.13.2" }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"
num-complex = "0.4"
inkwell = "0.5"
rayon = "1.10"
hashbrown = "0.17"
smallvec = "1.14"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
logos = "0.16"
chumsky = "0.13"
cranelift = "0.127"
cranelift-module = "0.127"
cranelift-jit = "0.127"
cranelift-codegen = "0.127"
cranelift-frontend = "0.127"
pulp = "0.22"
sprs = "0.11"
fast_polynomial = "0.4"
roots = "0.0"
quadrature = "0.1"
pyo3 = { version = "0.29", features = ["abi3-py310"] }
cbindgen = "0.29"
criterion = "0.8"
proptest = "1.6"
mimalloc = "0.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
