[package]
name = "ocas-atom"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Symbolic expression tree and rewriting for oCAS"

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
hashbrown = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
