[package]
name = "ocas-c"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "C/C++ bindings for oCAS"

[lib]
name = "ocas_c"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
ocas-poly.workspace = true
ocas-atom.workspace = true
ocas-calc.workspace = true
ocas-eval.workspace = true
ocas-parse.workspace = true
ocas-rewrite.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[build-dependencies]
cbindgen = { workspace = true }

[features]
default = []
