[package]
name = "ocas-calc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Calculus and equation solving for oCAS"

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
ocas-atom.workspace = true
ocas-poly.workspace = true
ocas-rewrite.workspace = true
num-integer.workspace = true
num-traits.workspace = true
[dev-dependencies]
proptest = { workspace = true }
[features]
default = []
