[package]
name = "ocas-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core runtime, memory management, and numerical backend glue for oCAS"

[dependencies]
thiserror = { workspace = true }
rayon = { workspace = true }
# Explicit version (not workspace-inherited): cargo package on Rust < 1.90
# cannot resolve workspace.dependencies inheritance when packaging a
# published crate standalone (release-plz CI uses 1.89).
ahash = "0.8"
serde = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }

# Optional LGPL backends
gmp = { package = "rug", version = "1.27", optional = true }

[features]
default = []
serde = ["dep:serde"]
gmp = ["dep:gmp", "dep:num-bigint"]

[dev-dependencies]
proptest = { workspace = true }
