[package]
name = "ocas-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core runtime, memory management, and numerical backend glue for oCAS"

[dependencies]
thiserror = { workspace = true }
rayon = { workspace = true }
# Explicit version (not workspace-inherited): release-plz runs cargo metadata
# in a stripped per-crate temp dir that drops the workspace root, so any
# `workspace = true` manifest fails ("dependency.ahash was not found in
# workspace.dependencies"). See /memories/repo/release-plz-limitation.
ahash = "0.8"
serde = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }

# Optional LGPL backends
gmp = { package = "rug", version = "1.27", optional = true }

[features]
default = []
serde = ["dep:serde"]
gmp = ["dep:gmp", "dep:num-bigint"]

[dev-dependencies]
proptest = { workspace = true }
