[package]
name = "ocas-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Algebraic domains and number types for oCAS"

[dependencies]
ocas-core.workspace = true
num-traits = { workspace = true }
num-integer = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-complex = { workspace = true }

# Optional GMP/MPFR backends (LGPL).
# On Windows/MinGW the `gmp`/`mpfr` features enable `gmp-mpfr-sys/use-system-libs`,
# which requires MSYS2 packages `mingw-w64-x86_64-gmp` and (for mpfr)
# `mingw-w64-x86_64-mpfr`. On other platforms the default source build is used.
rug = { version = "1.27", optional = true, default-features = false, features = ["integer", "rational", "float"] }
gmp-mpfr-sys = { version = "1.7", optional = true, default-features = false, features = ["mpfr"] }

[features]
default = []
# GMP-backed arbitrary-precision integers and rationals.
# On Windows/MinGW this uses the system GMP library via `gmp-mpfr-sys/use-system-libs`.
gmp = ["dep:rug", "dep:gmp-mpfr-sys", "gmp-mpfr-sys/use-system-libs"]
# MPFR-backed rigorous real balls.
# On Windows/MinGW this uses the system GMP/MPFR libraries via `gmp-mpfr-sys/use-system-libs`.
mpfr = ["dep:rug", "dep:gmp-mpfr-sys", "gmp-mpfr-sys/use-system-libs"]

[dev-dependencies]
proptest = { workspace = true }
