[package]
name = "ocas-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Algebraic domains and number types for oCAS"

[dependencies]
ocas-core.workspace = true
num-traits = { workspace = true }
num-integer = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-complex = { workspace = true }

# Optional GMP/MPFR backends (LGPL).
# On Windows/MinGW, enable the `system-libs` feature to link against MSYS2
# system libraries (packages `mingw-w64-x86_64-gmp` and
# `mingw-w64-x86_64-mpfr`). On other platforms the bundled sources are
# compiled by default, avoiding system-library version mismatches.
rug = { version = "1.27", optional = true, default-features = false, features = ["integer", "rational", "float"] }
gmp-mpfr-sys = { version = "1.7", optional = true, default-features = false, features = ["mpfr"] }

[features]
default = []
# GMP-backed arbitrary-precision integers and rationals.
gmp = ["dep:rug", "dep:gmp-mpfr-sys"]
# MPFR-backed rigorous real balls.
mpfr = ["dep:rug", "dep:gmp-mpfr-sys"]
# Link against preinstalled system GMP/MPFR/MPC instead of compiling the
# bundled sources. Required on Windows/MinGW; optional elsewhere.
system-libs = ["gmp-mpfr-sys/use-system-libs"]

[dev-dependencies]
proptest = { workspace = true }
