[package]
name = "ocas-eval"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Evaluation and JIT code generation for oCAS"

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
ocas-atom.workspace = true
thiserror.workspace = true
cranelift = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
wide = { workspace = true, optional = true }

[features]
default = []
jit = ["cranelift", "cranelift-module", "cranelift-jit", "cranelift-codegen", "cranelift-frontend"]
simd = ["wide"]
