[package]
name = "ocas-eval"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Evaluation and JIT code generation for oCAS"

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
ocas-atom.workspace = true
thiserror.workspace = true
rand = { workspace = true }
rand_xoshiro = { workspace = true }
cranelift = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
pulp = { workspace = true, optional = true }
fast_polynomial = { workspace = true, optional = true }

[features]
default = []
jit = ["cranelift", "cranelift-module", "cranelift-jit", "cranelift-codegen", "cranelift-frontend"]
simd = ["pulp"]
fast-poly = ["dep:fast_polynomial"]
