[package]
name = "ocas-gpl"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Optional GPL-only backends for oCAS"

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
ocas-poly.workspace = true

[features]
default = []
