[package]
name = "ocas-parse"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parser and printer for oCAS"

[dependencies]
ocas-core.workspace = true
ocas-atom.workspace = true
thiserror = { workspace = true }
logos = { workspace = true }
chumsky = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
