[package]
name = "ocas-poly"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Polynomial algorithms for oCAS"

[dependencies]
ocas-core = { path = "../ocas-core" }
ocas-domain = { path = "../ocas-domain" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
hashbrown = { workspace = true }
smallvec = { workspace = true }
flint3-sys = { version = "3.5", optional = true }
rug = { version = "1.27", optional = true, default-features = false, features = ["integer", "rational"] }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
# Use the system FLINT library via pkg-config. Bundled builds require a POSIX
# environment (sh, cp, make) and are not supported on Windows.
flint = ["dep:flint3-sys", "flint3-sys/use-system-libs"]
# Pure-Rust GMP-backed integer/rational polynomial backend.
# On Windows/MinGW this uses system GMP via `gmp-mpfr-sys/use-system-libs`.
gmp = ["ocas-domain/gmp", "dep:rug"] 
