[package]
name = "ocas-poly"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Polynomial algorithms for oCAS"

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
hashbrown = { workspace = true }
smallvec = { workspace = true }
flint3-sys = { version = "3.5", optional = true }
rug = { version = "1.27", optional = true, default-features = false, features = ["integer", "rational"] }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
# Build FLINT from bundled source (requires cmake).
# Use `flint-system` if you have FLINT >= 3.0 installed via pkg-config.
flint = ["dep:flint3-sys"]
# Use system FLINT library via pkg-config.
# Bundled builds require a POSIX environment (sh, cp, make) and are not
# supported on Windows.
flint-system = ["dep:flint3-sys", "flint3-sys/use-system-libs"]
# Pure-Rust GMP-backed integer/rational polynomial backend.
# On Windows/MinGW, also enable the top-level `system-libs` feature.
gmp = ["ocas-domain/gmp", "dep:rug"]
