[package]
name = "ocas-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for oCAS"

[lib]
name = "ocas_py"
crate-type = ["cdylib"]

[dependencies]
ocas-core.workspace = true
ocas-atom.workspace = true
ocas-domain.workspace = true
ocas-poly.workspace = true
ocas-calc.workspace = true
ocas-eval.workspace = true
ocas-parse.workspace = true
pyo3 = { workspace = true }

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
