[package]
name = "ocas-rewrite"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pattern matching, rewriting and rule-based simplification for oCAS"

[dependencies]
ocas-core = { path = "../ocas-core" }
ocas-atom = { path = "../ocas-atom" }
ocas-parse = { path = "../ocas-parse" }
hashbrown = { workspace = true }
smallvec = { workspace = true }

# Optional equality saturation backend.
egg = { version = "0.10", optional = true }

[features]
default = []
egg = ["dep:egg"]
