[package]
name = "ocas-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Integration tests and benchmarks for oCAS"
publish = false

[dependencies]
ocas = { path = "../ocas" }
ocas-core = { path = "../ocas-core" }
ocas-domain = { path = "../ocas-domain" }
ocas-poly = { path = "../ocas-poly" }
ocas-atom = { path = "../ocas-atom" }
ocas-calc = { path = "../ocas-calc" }
ocas-rewrite = { path = "../ocas-rewrite" }
ocas-eval = { path = "../ocas-eval" }
num-bigint = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
quadrature = { workspace = true, optional = true }

[features]
default = []
gmp = ["ocas-core/gmp"]
jit = ["ocas-eval/jit"]
simd = ["ocas-eval/simd"]
ntt = ["ocas-poly/ntt"]
sprs = ["ocas-poly/sprs"]
pulp = ["ocas-eval/pulp"]
fast-poly = ["ocas-eval/fast-poly"]
verify-roots = []
verify-quadrature = ["dep:quadrature"]

[[bench]]
name = "arena"
harness = false

[[bench]]
name = "gmp_integer"
harness = false

[[bench]]
name = "sympy_comparison"
harness = false

[[bench]]
name = "eval_interpreter"
harness = false

[[bench]]
name = "eval_simd"
harness = false

[[bench]]
name = "eval_jit"
harness = false
required-features = ["jit"]

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "poly_dense"
harness = false

[[bench]]
name = "poly_sparse"
harness = false

[[bench]]
name = "poly_gcd"
harness = false

[[bench]]
name = "poly_factor"
harness = false

[[bench]]
name = "groebner"
harness = false

[[bench]]
name = "calculus"
harness = false

[[bench]]
name = "integrate"
harness = false

[[bench]]
name = "rewrite"
harness = false

[[bench]]
name = "ntt_poly_mul"
harness = false
required-features = ["ntt"]

[[bench]]
name = "eval_estrin"
harness = false
required-features = ["fast-poly"]

[[bench]]
name = "eval_pulp"
harness = false
required-features = ["simd"]

[[bench]]
name = "eval_streaming"
harness = false
