[package]
name = "ocas"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "open Computer Algebra System — high-performance symbolic computation in Rust"

[dependencies]
ocas-core = { path = "../ocas-core" }
ocas-domain = { path = "../ocas-domain" }
ocas-poly = { path = "../ocas-poly" }
ocas-atom = { path = "../ocas-atom" }
ocas-calc = { path = "../ocas-calc" }
ocas-eval = { path = "../ocas-eval" }
ocas-parse = { path = "../ocas-parse" }
ocas-py = { path = "../ocas-py", optional = true }
ocas-gpl = { path = "../ocas-gpl", optional = true }

[features]
default = []
gmp = ["ocas-domain/gmp", "ocas-poly/gmp", "ocas-core/gmp"]
mpfr = ["ocas-domain/mpfr"]
flint = ["ocas-poly/flint"]
python = ["dep:ocas-py"]
llvm = ["ocas-eval/llvm"]
gpl = ["dep:ocas-gpl"]

[dev-dependencies]
criterion = { workspace = true }
