[package]
name = "ocas"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "open Computer Algebra System — high-performance symbolic computation in Rust"

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
ocas-poly.workspace = true
ocas-atom.workspace = true
ocas-calc.workspace = true
ocas-eval.workspace = true
ocas-parse.workspace = true
ocas-rewrite.workspace = true
ocas-py = { workspace = true, optional = true }
ocas-gpl = { workspace = true, optional = true }

[features]
default = []
gmp = ["ocas-domain/gmp", "ocas-poly/gmp", "ocas-core/gmp"]
mpfr = ["ocas-domain/mpfr"]
flint = ["ocas-poly/flint"]
python = ["dep:ocas-py"]
llvm = ["ocas-eval/llvm"]
gpl = ["dep:ocas-gpl"]
egg = ["ocas-rewrite/egg"]

[dev-dependencies]
criterion = { workspace = true }
