[package]
name = "ocas"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "open Computer Algebra System — high-performance symbolic computation in Rust"

[dependencies]
ocas-core.workspace = true
ocas-domain.workspace = true
ocas-poly.workspace = true
ocas-atom.workspace = true
ocas-calc.workspace = true
ocas-eval.workspace = true
ocas-parse.workspace = true
ocas-rewrite.workspace = true
ocas-py = { workspace = true, optional = true }
ocas-gpl = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }

[features]
default = []
gmp = ["ocas-domain/gmp", "ocas-poly/gmp", "ocas-core/gmp"]
mpfr = ["ocas-domain/mpfr"]
flint = ["ocas-poly/flint"]
python = ["dep:ocas-py"]
gpl = ["dep:ocas-gpl"]
egg = ["ocas-rewrite/egg"]
jit = ["ocas-eval/jit"]
simd = ["ocas-eval/simd"]
mimalloc = ["dep:mimalloc"]
# Link against preinstalled system GMP/MPFR/MPC instead of compiling the
# bundled sources. Required on Windows/MinGW; optional elsewhere.
system-libs = ["ocas-domain/system-libs"]
# NTT-based fast polynomial multiplication over ℤ_p (0.13.0).
ntt = ["ocas-poly/ntt"]
# Sparse matrix backend for F4 prep (0.13.0).
sprs = ["ocas-poly/sprs"]
# fast_polynomial Estrin evaluation (0.13.0).
fast-poly = ["ocas-eval/fast-poly"]

[dev-dependencies]
criterion = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

